# rbibli

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FRONTEND_LOCATIONS.md  MISSING_FEATURES.md  README.md  SECURITY.md  check_output.txt  docker-compose.yml  docker-compose_example.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docker.yml
backend/: Cargo.toml  Dockerfile  apply_genres_migrations.sql  complete_fix.sql  configuration.toml  final_fix.sql  fix_all_migrations.sql  fix_and_apply_genres.sql  fix_collations.sql  fix_migration_20241110000010.sql  fix_migrations.sql  fix_publisher_id_collation.sql  mark_migrations_applied.sql  mark_migrations_complete.sql
backend/.sqlx/: query-788dc2ea3943d4445768e1a9ffb5896a9441e08af44401daeeba4e872cb9fd2f.json
backend/migrations/: 20241110000001_create_titles_table.down.sql  20241110000001_create_titles_table.up.sql  20241110000002_create_volumes_table.down.sql  20241110000002_create_volumes_table.up.sql  20241110000003_create_borrowers_table.down.sql  20241110000003_create_borrowers_table.up.sql  20241110000004_create_loans_table.down.sql  20241110000004_create_loans_table.up.sql  20241110000005_create_locations_table.down.sql  20241110000005_create_locations_table.up.sql  20241110000006_update_volumes_location.down.sql  20241110000006_update_volumes_location.up.sql  20241110000007_create_authors_table.down.sql  20241110000007_create_authors_table.up.sql  20241110000008_create_title_authors_table.down.sql  20241110000008_create_title_authors_table.up.sql  20241110000009_create_publishers_table.down.sql  20241110000009_create_publishers_table.up.sql  20241110000011_fix_publishers_collation.down.sql  20241110000011_fix_publishers_collation.up.sql  20241110000012_create_genres_table.down.sql  20241110000012_create_genres_table.up.sql  20241110000013_update_titles_genre_fk.down.sql  20241110000013_update_titles_genre_fk.up.sql  20241110000014_update_titles_publisher_fk.down.sql  20241110000014_update_titles_publisher_fk.up.sql  20241113000001_add_image_blob_to_titles.down.sql  20241113000001_add_image_blob_to_titles.up.sql  20241113000010_create_borrower_groups.down.sql  20241113000010_create_borrower_groups.up.sql  20241113000011_add_group_to_borrowers.down.sql  20241113000011_add_group_to_borrowers.up.sql  20241113000012_add_loanable_to_volumes.down.sql  20241113000012_add_loanable_to_volumes.up.sql  20241113000013_add_address_fields_to_borrowers.down.sql  20241113000013_add_address_fields_to_borrowers.up.sql  20241113000014_create_dewey_classifications.down.sql  20241113000014_create_dewey_classifications.up.sql  20241118000001_create_series_table.down.sql  20241118000001_create_series_table.up.sql  (+14 more)
backend/src/: configuration.rs  google_books.rs  lib.rs  main.rs
backend/src/handlers/: authors.rs  borrower_groups.rs  borrowers.rs  dewey.rs  genres.rs  isbn_lookup.rs  loans.rs  locations.rs  mod.rs  publishers.rs  series.rs  statistics.rs  titles.rs  uploads.rs  volumes.rs
backend/src/models/: author.rs  borrower.rs  dewey.rs  genre.rs  loan.rs  location.rs  mod.rs  publisher.rs  series.rs  title.rs  volume.rs
backend/static/: index.html
backend/tests/: health_check.rs
config/: configuration.toml
docs/: README.md  _config.yml  robots.txt
documentation/: AUTHORS_FEATURE.md  DEWEY_IMPLEMENTATION.md  DEWEY_PROPOSAL.md  DOCUMENTATION_STATUS.md  FRONTEND_API_INTEGRATION.md  FUNCTION_DOCUMENTATION_SUMMARY.md  LOCATIONS_FEATURE.md  SERIES_FEATURE.md  api.md  architecture.md  architecture_en.md  development_environment.md  planning.md  planning_en.md  requirements.md  sqlx_installation.md
frontend/: Cargo.toml  Dockerfile  TRANSLATIONS.md  Trunk.toml  build.rs  index.html  input.css  tailwind.css  update_translations.sh
frontend/lang/: de.po  fr.mo  fr.po  rbibli.lokalize
frontend/lang/de/LC_MESSAGES/: rbibli.mo
frontend/lang/fr/LC_MESSAGES/: frontend.mo  frontend.po
frontend/src/: api_client.rs  app.rs  lib.rs  main.rs  models.rs
frontend/src/components/: mod.rs
frontend/src/pages/: admin.rs  authorities.rs  collections.rs  dashboard.rs  loans.rs  mod.rs
frontend/src/services/: api_client.rs  mod.rs
frontend/src/utils/: mod.rs
frontend/ui/: app-window.slint  gallery_settings.slint  side_bar.slint  styles.slint
frontend/ui/pages/: about_page.slint  authors_page.slint  genres_page.slint  loans_page.slint  locations_page.slint  page.slint  pages.slint  publishers_page.slint  rbibli_button.slint  series_page.slint  settings_page.slint  statistics_page.slint  titles_page.slint
shared/: Cargo.toml
shared/src/: dtos.rs  lib.rs
(+21 files in other folders)
