[package]
name = "backend"
version = "0.1.0"
edition = "2024"
authors = ["Guy Corbaz <guy@corbaz.org>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
actix-web = "4.11.0"
actix-multipart = "0.7"
actix-files = "0.6"
tokio = { version="1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
base64 = "0.22"

[dev-dependencies]
reqwest = "0.12.24"
