[package]
name = "backend"
version = "0.3.2"
edition = "2024"
authors = ["Guy Corbaz <guy@corbaz.org>"]
default-run = "backend"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
actix-web = "4.11.0"
actix-multipart = "0.7"
actix-files = "0.6"
actix-cors = "0.6"
tokio = { version="1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
base64 = "0.22"
reqwest = { version = "0.12.24", features = ["json"] }
strsim = "0.11"
config = "0.15.19"
clap = { version = "4.5.53", features = ["derive"] }
dotenv = "0.15.0"
shared = { path = "../shared", features = ["backend"] }

[dev-dependencies]
