[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.14.1"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"
urlencoding = "2.1"

[build-dependencies]
slint-build = "1.14.1"
