[package]
name = "frontend"
version = "0.2.0"
edition = "2024"

[lib]
name = "frontend_lib"
path = "src/main.rs"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
shared = { path = "../shared" }
serde-wasm-bindgen = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }
tokio = { version = "1", features = ["full"] }
rfd = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
rfd = "0.15"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window", "Location"] }

[build-dependencies]
slint-build = "1.14.1"
